# SCHNApps-QML

./: CMakeLists.txt
cmake/: utilities.cmake
plugins/: CMakeLists.txt
plugins/surface/import/: CMakeLists.txt  import.cpp  import.h  menu.qml
schnapps/: CMakeLists.txt  main.cpp  resources.qrc
schnapps/core/: CMakeLists.txt  map_handler.cpp  map_handler.h  plugin.cpp  plugin.h  schnapps.cpp  schnapps.h  view.cpp  view.h
schnapps/ui/: ControlTabMap.qml  ControlTabPlugin.qml  schnapps.qml
schnapps/utils/: CMakeLists.txt  view.cpp  view.h  view_renderer.cpp  view_renderer.h
